refactor: 实现 Session 和 Checkpoint 分离设计
将 Session 和 Checkpoint 分离为两个独立的实体，实现清晰的职责划分：
- Session：管理会话级别的元数据（标题、Agent、状态等）
- Checkpoint：管理执行状态快照，用于状态恢复和历史追踪

主要变更：
- 新增 SessionEntity 和 SessionMapper
- 重构 CheckpointEntity：使用 sessionId 替代 threadId，移除 isLatest
- 重构 CheckpointMapper：使用 session_id 替代 thread_id
- 重构 DatabaseCheckpointStorage：适配新的数据模型
- 重构 SessionService：使用分离后的 SessionMapper 和 CheckpointManager
- 更新 CheckpointController：API 端点从 /threads 改为 /sessions
- 更新数据库 schema：创建 sessions 表，重构 checkpoint_snapshots 表

技术细节：
- 添加 JSONB 类型转换 (::jsonb) 用于 agent_switch_history 字段
- 处理 Message 对象反序列化：兼容 List<Message> 和 List<Map> 两种格式
- 移除 is_latest 字段和触发器，查询性能提升

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>